Fix an issue where images in the presskit could go out of bounds, and remove some CSS cruft.

--- a/css/paralune-phlat.css
+++ b/css/paralune-phlat.css
@@ -84,12 +84,6 @@ body {
     background-color: transparent;
     padding-top: 10px;
     padding-bottom: 10px;
-    /*
-    background: url('/images/jumbotron-background.png');
-    background-repeat: no-repeat;
-    background-size: 1000px 500px;
-    background-position: center center;
-    */
 }
 
 #company-logo {
@@ -110,6 +104,12 @@ body {
     padding-left: 10px;
     padding-right: 10px;
     background-color: #00161C;
+ }
+
+#content-main img {
+    width: auto;
+    max-width: 100%;
+    max-height: 100%;
  }
 
  #content-main .row {
@@ -183,6 +183,8 @@ body {
 
 .content-card img {
     width: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .content-card .list-inline {
